--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap');
 /* 
 
     You can write your own styles here...
@@ -10,3 +10,59 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+body{
+    background-color: #ffffff;
+    background-image: url("https://www.transparenttextures.com/patterns/absurdity.png");
+}
+
+.title{
+    color: #EBD8D9;
+    font-family: 'Castoro Titling', cursive;
+    font-size: 4rem;
+}
+
+ul{
+    box-shadow: 0px 4px 3px gray;
+}
+
+.TaskCount{
+    font-size: 14px;
+    color: #D8D8D8;
+}
+
+.deleteBtn{
+    display: block;
+    font-weight: bold;
+}
+
+.taskItem:hover + .deleteBtn {
+    display: block;
+    font-weight: bold;
+}
+
+
+.deleteBtn:hover {
+    color: red;
+    background-color: white;
+    border-color: red;
+}
+
+.list-group{
+    border-radius: 0%;
+}
+
+.inputTask{
+    border: none;
+    outline: none;
+    height: 100%;
+    width: 100%;
+}
+
+.inputTask:focus {
+    border: none;
+}
+
+.inputTask:active {
+    border: none;
+}
